# gitfetch

./: .SRCINFO  .gitignore  Cargo.toml  LICENSE  PKGBUILD  README.md
.github/workflows/: release.yml
Formula/: gitfetch.rb
src/: config_manager.rs  contribution_analyzer.rs  errors.rs  github_client.rs  graph_generator.rs  main.rs
