[package]
name = "gitfetch"
version = "0.1.1"
edition = "2021"
authors = ["FabricSoul"]
description = "A command-line tool to fetch and display Git contribution information"
repository = "https://github.com/FabricSoul/gitfetch"
license = "GPL-3.0"
readme = "README.md"
keywords = ["git", "github", "contributions", "cli", "tui"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = "4.5.9"
chrono = "0.4.38"
colored = "2.1.0"
octocrab = "0.38.0"
serde_json = "1.0.120"
anyhow = "1.0.86"
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["full"] }
toml = "0.8.16"
serde = "1.0.204"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
